LDEV-1623: Ordered lists were not showing up in the FCKEditor. Adding a css entry for <OL> seems to fix it.

--- a/lams_central/web/css/defaultHTML_learner.css
+++ b/lams_central/web/css/defaultHTML_learner.css
@@ -101,7 +101,9 @@ ol {
 	margin-right: 30px;
 }
 
-
+li.no-list-type  {
+	list-style-type: none;
+}
 /*layout of the table with the alternate color for the table heading cell */
 table.alternative-color {
  	 width:100%; 
